# sec-rag-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SUMMARY.md  bootstrap_demo.py  build_and_evaluate.py  chunking_comparison.py  debug.py  eval-log.txt  evaluation_results.json  generate_chunking_datasets.py  json_test.py  pyproject.toml  rag-flow.excalidraw  requirements.txt  run_chunking_comparison.py  run_evaluation.py  test.py  test_count.py  test_regex.py  test_solution.py
data/: company_tickers.json
data/results/: checkpoint_eval_run_20250621_142134.json  checkpoint_langchain_eval_20250621_144831.json  chunking_comparison_all_configs_20250620_184558.csv  chunking_comparison_results_20250618_164121.csv  evaluation_Large_500_100_800_20250620_165509.csv  evaluation_Medium_350_100_800_20250620_160551.csv  evaluation_Small_150_50_500_20250620_142804.csv  evaluation_XLarge_750_150_1000_20250620_182003.csv  evaluation_results_20250620_105905.csv  evaluation_results_20250620_105905.json  evaluation_results_20250621_023521.csv  evaluation_results_20250621_023521.json  evaluation_results_20250621_070639.json  evaluation_results_20250621_070733.csv  evaluation_results_20250621_070733.json  evaluation_results_20250621_111538.csv  evaluation_results_20250621_111538.json  evaluation_results_20250621_142613.csv  evaluation_results_20250621_142613.json  qa_dataset_Medium_350_100_800_20250620_160551.json  qa_dataset_Small_150_50_500_20250620_142804.json
docs/: migration_guide.md
eda/: viz.py
evaluation/: README.md  bootstrap_analysis.py  comprehensive_evaluator.py  comprehensive_results.json  evaluator.py  generate_qa_dataset.py  metrics.py  normalize_qa_sample.py  requirements.txt  scenarios.py  scenarios_financerag.py  test_balancing.py  test_comprehensive_eval.py  test_comprehensive_evaluator.py  test_qa_generation.py
examples/: rag_example.py
images/: rag-flow.excalidraw
notebooks/: EDA.ipynb  chunking_comparison_results.json  eda.py  evaluation.ipynb  evaluation.py  implementation.ipynb  implementation.py
notebooks/data/: df_sample.csv
rag/: chunkers.py  collection.py  config.py  docker_utils.py  document_store.py  embedding.py  generation.py  load_data.py  openai_helpers.py  parser.py  pipeline.py  prepare_data.py  reranker.py  search.py  vector_store.py
rag/data_processing/: __init__.py  chunkers.py  filing_exploder.py  prepare_data.py  text_cleaning.py
recovered_files/: text_cleaning.py
scripts/: generate_qa_dataset.py
src/: chunkers.py  date_extractor.py  download_data.py  embedding.py  explode.py  filing_exploder.py  fine_tune.py  pipeline_factory.py  query_processor.py  rag_search.py  run_pipeline.py  text_preprocessing.py  vector_db.py  vector_db_backup.py
src/evaluation/: analysis.py  evaluator.py  flatten.py  reporting.py  run_chunking_comparison.py  runner.py
src/methods/: baseline.py  ensemble_rerank_rag.py  rerank_rag.py  unfiltered_text.py  vanilla_rag.py  web_search.py
src/metrics/: metrics.py
src/openai_functions/: answer_question.py  (+3 more)
tests/: test_final_validation.py  test_methods.py  test_metrics.py  test_pipeline_simple.py  test_run_evaluation.py
(+101 files in other folders)
