[project]
name = "dowjones-takehome"
version = "0.1.0"
description = ""
authors = [
    {name = "jon-robbins",email = "117274763+jon-robbins@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "prettyprint (>=0.1.5,<0.2.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "transformers (>=4.34.0)",
    "torch (>=2.7.1,<3.0.0)",
    "accelerate (>=0.30.0,<0.31.0)",
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

