[project]
name = "dowjones-takehome"
version = "0.1.0"
description = ""
authors = [
    {name = "jon-robbins",email = "117274763+jon-robbins@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "prettyprint (>=0.1.5,<0.2.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "transformers (>=4.34.0)",
    "torch (>=2.7.1,<3.0.0)",
    "accelerate (>=0.30.0,<0.31.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "duckdb (>=1.3.0,<2.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "openai (>=1.86.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "qdrant-client (>=1.14.2,<2.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.23,<0.4.0)",
    "rouge-score (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{include = "sec_vectorstore", from = "src"}]
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

